# libsodium-chacha20

./: CMakeLists.txt  LICENSE  README.md
include/: crypto_secretbox_chacha20poly1305.h  crypto_stream_chacha20.h
src/crypto_secretbox/chacha20poly1305/: secretbox_chacha20poly1305_api.c
src/crypto_secretbox/chacha20poly1305/ref/: box_chacha20poly1305.c
src/crypto_stream/: try.c
src/crypto_stream/chacha20/: stream_chacha20_api.c
src/crypto_stream/chacha20/krovetz/: stream_chacha20_krovetz.c
src/crypto_stream/chacha20/ref/: chacha.c  chacha.h  stream_chacha20_ref.c
test/: secretbox_test.c
